# emote

./: Cargo.toml  MANIFEST.in  Pipfile  README.md  TODO.md  build.rs  sap.py  setup.cfg  setup.py
python/: .gitignore  Pipfile
python/src/sapply/: main.py
resources/: nato.json
scripts/: morse-code.py
src/: app.rs  charmap.py  cmapdefs.py  flip.py  lib.rs  main.rs  morse.py  prelude.rs  resources.rs  sap.py  zalgo.py
src/sap/: charmap.py  cli.py  cmapdefs.py  sap.py
src/sapply/: argp.py  argp2.py  cli.py  cmap.py  flip.py  main.py  tokens.py
