[package]
name = "emote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
indexmap = { version = "2.0.0", features = ["serde"] }
serde = "1.0.167"
serde_json = { version = "1.0.100", features = ["preserve_order"] }
