[package]
name = "emote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
clipboard = "0.5.0"
clipboard-ext = "0.2.0"
const_format = "0.2.31"
indexmap = { version = "2.0.0", features = ["serde"] }
phf = { version = "0.11.2", features = ["macros"] }
serde = "1.0.167"
serde_json = { version = "1.0.100", features = ["preserve_order"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["serde", "serde_json"] }

[build-dependencies]
const_format = "0.2.31"
phf = { version = "0.11.2", features = ["macros"] }
serde = "1.0.167"
serde_json = { version = "1.0.100", features = ["preserve_order"] }
indexmap = { version = "2.0.0", features = ["serde"] }
phf_codegen = "0.11.2"
itertools = "0.11.0"
